--- a/i10n-arb/intl_en_US.arb
+++ b/i10n-arb/intl_en_US.arb
@@ -1,87 +1,87 @@
 {
-  "@@last_modified": "2019-04-30T15:02:44.753296",
-  "title": "Flutter应用",
+  "@@last_modified": "2019-11-20T16:56:46.969489",
+  "title": "Flutter App",
   "@title": {
     "description": "Title for the Demo application",
     "type": "text",
     "placeholders": {}
   },
-  "home": "Github客户端",
+  "home": "Github",
   "@home": {
     "type": "text",
     "placeholders": {}
   },
-  "language": "语言",
+  "language": "Language",
   "@language": {
     "type": "text",
     "placeholders": {}
   },
-  "login": "登录",
+  "login": "Login",
   "@login": {
     "type": "text",
     "placeholders": {}
   },
-  "auto": "跟随系统",
+  "auto": "Auto",
   "@auto": {
     "type": "text",
     "placeholders": {}
   },
-  "setting": "设置",
+  "setting": "Setting",
   "@setting": {
     "type": "text",
     "placeholders": {}
   },
-  "theme": "换肤",
+  "theme": "Theme",
   "@theme": {
     "type": "text",
     "placeholders": {}
   },
-  "noDescription": "暂无描述!",
+  "noDescription": "No description yet !",
   "@noDescription": {
     "type": "text",
     "placeholders": {}
   },
-  "userName": "用户名",
+  "userName": "User Name",
   "@userName": {
     "type": "text",
     "placeholders": {}
   },
-  "userNameRequired": "用户名不能为空",
+  "userNameRequired": "User name required!",
   "@userNameRequired": {
     "type": "text",
     "placeholders": {}
   },
-  "password": "密码",
+  "password": "Password",
   "@password": {
     "type": "text",
     "placeholders": {}
   },
-  "passwordRequired": "密码不能为空",
+  "passwordRequired": "Password required!",
   "@passwordRequired": {
     "type": "text",
     "placeholders": {}
   },
-  "userNameOrPasswordWrong": "用户名或密码不正确",
+  "userNameOrPasswordWrong": "User name or password is not correct!",
   "@userNameOrPasswordWrong": {
     "type": "text",
     "placeholders": {}
   },
-  "logout": "注销",
+  "logout": "logout",
   "@logout": {
     "type": "text",
     "placeholders": {}
   },
-  "logoutTip": "确定要退出当前账号吗?",
+  "logoutTip": "Are you sure you want to quit your current account?",
   "@logoutTip": {
     "type": "text",
     "placeholders": {}
   },
-  "yes": "确定",
+  "yes": "yes",
   "@yes": {
     "type": "text",
     "placeholders": {}
   },
-  "cancel": "取消",
+  "cancel": "cancel",
   "@cancel": {
     "type": "text",
     "placeholders": {}
