--- a/child_star/i10n-arb/intl_zh.arb
+++ b/child_star/i10n-arb/intl_zh.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2019-11-26T15:53:22.566074",
+  "@@last_modified": "2019-12-03T17:44:12.870852",
   "appName": "child_star",
   "@appName": {
     "type": "text",
@@ -7,6 +7,11 @@
   },
   "homeTitle": "首页",
   "@homeTitle": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "homeExitMessage": "再按一次退出程序",
+  "@homeExitMessage": {
     "type": "text",
     "placeholders": {}
   },
