--- a/child_star/i10n-arb/intl_en.arb
+++ b/child_star/i10n-arb/intl_en.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2019-12-03T17:44:12.870852",
+  "@@last_modified": "2019-12-05T17:55:46.246406",
   "appName": "child_star",
   "@appName": {
     "type": "text",
@@ -47,6 +47,41 @@
   },
   "homeCommunityTitle": "社区",
   "@homeCommunityTitle": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "loadFailureTitle": "加载失败,点击重试!",
+  "@loadFailureTitle": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "newDetailUnFollowTitle": "关注",
+  "@newDetailUnFollowTitle": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "newDetailFollowTitle": "已关注",
+  "@newDetailFollowTitle": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "newDetailDownloadTitle": "缓存",
+  "@newDetailDownloadTitle": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "newDetailReadingNumTitle": "阅读量",
+  "@newDetailReadingNumTitle": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "newDetailRelateVideoTitle": "相关视频",
+  "@newDetailRelateVideoTitle": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "newDetailRelateAudioTitle": "相关音频",
+  "@newDetailRelateAudioTitle": {
     "type": "text",
     "placeholders": {}
   }
