--- a/child_star/i10n-arb/intl_en.arb
+++ b/child_star/i10n-arb/intl_en.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2019-12-05T17:55:46.246406",
+  "@@last_modified": "2019-12-09T19:01:42.238569",
   "appName": "child_star",
   "@appName": {
     "type": "text",
@@ -82,6 +82,11 @@
   },
   "newDetailRelateAudioTitle": "相关音频",
   "@newDetailRelateAudioTitle": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "newDetailRelateArticleTitle": "相关图文",
+  "@newDetailRelateArticleTitle": {
     "type": "text",
     "placeholders": {}
   }
